# StreamBase

./: CMakeLists.txt  ClientMain.cpp  README.md  ServerMain.cpp
ClassRegistry/: Class.h  ClassId.h  ClassInterface.h  ClassMembers.h  ClassesPool.h  MemberId.h  Object.h  ObjectId.h  ObjectInterface.h
Client/: NamedPipeClient.cpp  NamedPipeClient.h  StreamBaseClient.cpp  StreamBaseClient.h
Protocol/: ActionId.h  Request.cpp  Request.h  Response.cpp  Response.h  ResultId.h
Server/: NamedPipeServer.cpp  NamedPipeServer.h  StreamBaseServer.cpp  StreamBaseServer.h
Tests/: SampleClassTimer.h  TestBuffers.cpp  TestBuffers.h  TestClassRegistry.cpp  TestClassRegistry.h  TestRawData.cpp  TestRawData.h  UnitTests.cpp
Utility/: InputBuffer.cpp  InputBuffer.h  OutputBuffer.cpp  OutputBuffer.h  RawData.cpp  RawData.h  StringHelpers.cpp  StringHelpers.h
